enabled xml documentation for the rest of the projects (some warnings still pop up)

--- a/src/src/Storage.Net.Amazon.Aws/project.json
+++ b/src/src/Storage.Net.Amazon.Aws/project.json
@@ -15,7 +15,8 @@
    },
 
    "buildOptions": {
-      "keyFile": "../../storage.snk"
+      "keyFile": "../../storage.snk",
+      "xmlDoc": true
    },
 
 
