--- a/src/src/Storage.Net.Esent/project.json
+++ b/src/src/Storage.Net.Esent/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
    "version": "1.0.0",
 
    "authors": [ "Ivan Gavryliuk" ],
@@ -17,7 +17,8 @@
    },
 
    "buildOptions": {
-      "keyFile": "../../storage.snk"
+      "keyFile": "../../storage.snk",
+      "xmlDoc": true
    },
 
    "dependencies": {
