--- a/src/src/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
+++ b/src/src/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Copyright>Copyright (c) 2015-2016 by Ivan Gavryliuk</Copyright>
     <AssemblyTitle>Storage.Net.Amazon.Aws</AssemblyTitle>
-    <VersionPrefix>3.5.0-alpha-2</VersionPrefix>
-    <TargetFramework>net45</TargetFramework>
+    <VersionPrefix>3.5.0-alpha-3</VersionPrefix>
+    <TargetFramework>net451</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Storage.Net.Amazon.Aws</AssemblyName>
     <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
@@ -21,7 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
     <PackageReference Include="AWSSDK.Core" Version="3.3.5" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.3" />
     <Reference Include="System" />
