--- a/src/src/Storage.Net.Microsoft.Azure/Storage.Net.Microsoft.Azure.csproj
+++ b/src/src/Storage.Net.Microsoft.Azure/Storage.Net.Microsoft.Azure.csproj
@@ -2,9 +2,9 @@
   <PropertyGroup>
     <Copyright>Copyright (c) 2015-2016 by Ivan Gavryliuk</Copyright>
     <AssemblyTitle>Storage.Net.Microsoft.Azure</AssemblyTitle>
-    <VersionPrefix>3.5.0-alpha-2</VersionPrefix>
+    <VersionPrefix>3.5.0-alpha-3</VersionPrefix>
     <Authors>Ivan Gavryliuk</Authors>
-    <TargetFrameworks>net45;netstandard1.6</TargetFrameworks>
+    <TargetFrameworks>net451;netstandard1.6</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Storage.Net.Microsoft.Azure</AssemblyName>
     <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
@@ -21,23 +21,21 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
+    <PackageReference Include="Microsoft.Azure.EventHubs" Version="1.0.0" />
+    <PackageReference Include="WindowsAzure.Storage" Version="8.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="netbox" Version="1.0.1703.701" />
+    <PackageReference Include="netbox" Version="1.1.1" />
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
     <PackageReference Include="WindowsAzure.ServiceBus" Version="3.4.5" />
-    <PackageReference Include="WindowsAzure.Storage" Version="8.0.1" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'net45' ">
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net451' ">
     <DefineConstants>$(DefineConstants);NETFULL</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
     <DefineConstants>$(DefineConstants);NETSTANDARD</DefineConstants>
   </PropertyGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
-    <PackageReference Include="WindowsAzure.Storage" Version="8.0.1" />
-  </ItemGroup>
 </Project>
