--- a/src/src/Storage.Net.Tests/Storage.Net.Tests.csproj
+++ b/src/src/Storage.Net.Tests/Storage.Net.Tests.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net45</TargetFramework>
-    <VersionPrefix>3.5.0-alpha-2</VersionPrefix>
+    <TargetFramework>net451</TargetFramework>
+    <VersionPrefix>3.5.0-alpha-3</VersionPrefix>
     <AssemblyName>Storage.Net.Tests</AssemblyName>
     <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
@@ -22,7 +22,7 @@
     <PackageReference Include="LogMagic" Version="2.1.0" />
     <PackageReference Include="Config.Net" Version="3.0.1702.1002" />
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
     <PackageReference Include="xunit" Version="2.2.0-beta5-build3474" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0-beta5-build1225" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.0.1" />
