--- a/src/src/Storage.Net.Microsoft.Azure/Storage.Net.Microsoft.Azure.csproj
+++ b/src/src/Storage.Net.Microsoft.Azure/Storage.Net.Microsoft.Azure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
     <AssemblyTitle>Storage.Net.Microsoft.Azure</AssemblyTitle>
@@ -31,7 +31,7 @@
     <PackageReference Include="WindowsAzure.Storage" Version="8.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="netbox" Version="1.1.2" />
+    <PackageReference Include="netbox" Version="1.1.3" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
     <PackageReference Include="WindowsAzure.ServiceBus" Version="3.4.5" />
