--- a/src/src/Storage.Net.Microsoft.Azure/Storage.Net.Microsoft.Azure.csproj
+++ b/src/src/Storage.Net.Microsoft.Azure/Storage.Net.Microsoft.Azure.csproj
@@ -17,12 +17,13 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>3.5.2.0</Version>
-    <FileVersion>3.5.2.0</FileVersion>
+    <Version>3.5.3.0</Version>
+    <FileVersion>3.5.3.0</FileVersion>
     <AssemblyVersion>3.0.0.0</AssemblyVersion>
     <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>GitHub</RepositoryType>
+    <Description>Extension to Storage.Net providing integration with Microsoft Azure for Azure Storage blobs, messages, queues, azure service bus queues and topics, event hub and more. See project page for more details.</Description>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
