--- a/src/src/Storage.Net.Microsoft.Azure/Storage.Net.Microsoft.Azure.csproj
+++ b/src/src/Storage.Net.Microsoft.Azure/Storage.Net.Microsoft.Azure.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
     <AssemblyTitle>Storage.Net.Microsoft.Azure</AssemblyTitle>
@@ -17,8 +17,8 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>3.5.3.0</Version>
-    <FileVersion>3.5.3.0</FileVersion>
+    <Version>3.5.4.0</Version>
+    <FileVersion>3.5.4.0</FileVersion>
     <AssemblyVersion>3.0.0.0</AssemblyVersion>
     <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
