--- a/src/src/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
+++ b/src/src/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
     <AssemblyTitle>Storage.Net.Amazon.Aws</AssemblyTitle>
@@ -29,8 +29,8 @@
     <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
-    <PackageReference Include="AWSSDK.Core" Version="3.3.5" />
-    <PackageReference Include="AWSSDK.S3" Version="3.3.3" />
+    <PackageReference Include="AWSSDK.Core" Version="3.3.10.2" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.5.10" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
