--- a/src/src/Storage.Net.Tests/Storage.Net.Tests.csproj
+++ b/src/src/Storage.Net.Tests/Storage.Net.Tests.csproj
@@ -13,14 +13,15 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Storage.Net.Microsoft.Azure.DataLake.Store\Storage.Net.Microsoft.Azure.DataLake.Store.csproj" />
     <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
     <ProjectReference Include="..\Storage.Net.Amazon.Aws\Storage.Net.Amazon.Aws.csproj" />
     <ProjectReference Include="..\Storage.Net.Microsoft.Azure\Storage.Net.Microsoft.Azure.csproj" />
     <ProjectReference Include="..\Storage.Net.Esent\Storage.Net.Esent.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LogMagic" Version="2.2.5" />
-    <PackageReference Include="Config.Net" Version="3.1.1" />
+    <PackageReference Include="LogMagic" Version="2.2.6" />
+    <PackageReference Include="Config.Net" Version="3.1.2" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
     <PackageReference Include="xunit" Version="2.2.0-beta5-build3474" />
