--- a/src/src/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
+++ b/src/src/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
@@ -5,14 +5,16 @@
     <SignAssembly>true</SignAssembly>
     <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
-    <Version>1.2.3-alpha-1</Version>
-    <FileVersion>1.2.3.0</FileVersion>
+    <Version>1.0.0-alpha-1</Version>
+    <FileVersion>1.0.0.0</FileVersion>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
     <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
     <PackageIconUrl>http://i.isolineltd.com/nuget/storage.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
     <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Description>Provides Azure Data Lake Store integration for Storage.Net library</Description>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Management.DataLake.Store" Version="2.1.0-preview" />
