ADLS extra validation for all require parameters

--- a/src/src/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
+++ b/src/src/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard1.6;net451</TargetFrameworks>
     <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
-    <Version>1.0.0-alpha-5</Version>
+    <Version>1.0.0-alpha-6</Version>
     <FileVersion>1.0.0.0</FileVersion>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
