--- a/src/Storage.Net.Tests/Storage.Net.Tests.csproj
+++ b/src/Storage.Net.Tests/Storage.Net.Tests.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Storage.Net.Microsoft.Azure.DataLake.Store\Storage.Net.Microsoft.Azure.DataLake.Store.csproj" />
+    <ProjectReference Include="..\Storage.Net.Microsoft.Azure.Storage\Storage.Net.Microsoft.Azure.Storage.csproj" />
     <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
     <ProjectReference Include="..\Storage.Net.Amazon.Aws\Storage.Net.Amazon.Aws.csproj" />
     <ProjectReference Include="..\Storage.Net.Microsoft.Azure\Storage.Net.Microsoft.Azure.csproj" />
@@ -26,7 +27,7 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
     <PackageReference Include="xunit" Version="2.2.0-beta5-build3474" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0-beta5-build1225" />
-    <PackageReference Include="WindowsAzure.Storage" Version="8.1.1" />
+    <PackageReference Include="WindowsAzure.Storage" Version="8.1.3" />
     <PackageReference Include="WindowsAzure.ServiceBus" Version="3.4.5" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
