--- a/src/Storage.Net.Microsoft.Azure.ServiceBus/Storage.Net.Microsoft.Azure.ServiceBus.csproj
+++ b/src/Storage.Net.Microsoft.Azure.ServiceBus/Storage.Net.Microsoft.Azure.ServiceBus.csproj
@@ -26,4 +26,12 @@
     <Description>Extension to Storage.Net providing integration with Microsoft Azure Storage for blobs, tables and queues.</Description>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="0.0.5-preview" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
+  </ItemGroup>
+
 </Project>
