--- a/src/Storage.Net.Tests/Storage.Net.Tests.csproj
+++ b/src/Storage.Net.Tests/Storage.Net.Tests.csproj
@@ -22,11 +22,11 @@
     <ProjectReference Include="..\Storage.Net.Esent\Storage.Net.Esent.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LogMagic" Version="2.3.0" />
-    <PackageReference Include="Config.Net" Version="3.2.0" />
+    <PackageReference Include="LogMagic" Version="2.4.13" />
+    <PackageReference Include="Config.Net" Version="3.2.6" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-    <PackageReference Include="xunit" Version="2.2.0-beta5-build3474" />
+    <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.1.3" />
     <PackageReference Include="WindowsAzure.ServiceBus" Version="3.4.5" />
